Snapcraft: Use minified JREs, cleanup snapcraft.yaml * Also testing launchpad limitations
Squashed commit of the following:

commit 8e80b3df8d569ded108184fb26d0fb7ef2f3a70b
Author: Kyu <kyu@pokemmo.eu>
Date:   Sat Dec 11 05:10:01 2021 -0600

    --

commit 5f2943036674f98ef4eede6c2630cfa5048ff191
Author: Kyu <kyu@pokemmo.eu>
Date:   Sat Dec 11 05:08:47 2021 -0600

    --

commit b93784878b4a6ba751b988134506914a14b72dbe
Author: Kyu <kyu@pokemmo.eu>
Date:   Sat Dec 11 05:08:08 2021 -0600

    --

commit 0cf584f4cdaf630340d24fb0311290212e8d25d5
Author: Kyu <kyu@pokemmo.eu>
Date:   Sat Dec 11 05:01:42 2021 -0600

    --

commit cd8a87bf3ff4e67f4842e20fc6edc064a2780b61
Author: Kyu <kyu@pokemmo.eu>
Date:   Sat Dec 11 04:51:49 2021 -0600

    --

commit 53facc219e2c7039d2105143c38a1c21e43e3361
Author: Kyu <kyu@pokemmo.eu>
Date:   Sat Dec 11 03:32:43 2021 -0600

    --